--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ a{
      height: 400px;
      width: 250px;
      padding: 15px;
-     box-shadow: 20px 20px 20px 20px rgb(223, 213, 213);
+     box-shadow: 20px 20px 50px rgb(228, 217, 217);
  }
  .player img{
      max-width: 100%;
@@ -71,6 +71,7 @@ a{
 .optional-section{
       display: flex;
       margin-top: 100px;
+      margin-left: 30px;
       height: 550px;
       width: auto;
   }
@@ -84,4 +85,22 @@ a{
 
    .footer-icon{
        text-align: center;
+   }
+
+
+   /*------------------- midea query------------------------ */
+
+   @media only screen and (max-width: 688px) {
+       main{
+           width: 100%;
+           margin: 0;
+       }
+       header{
+           display:flex;
+           flex-direction: row;
+       }
+       .players{
+           display: grid;
+           grid-template-columns: repeat(1, 1fr);
+       }
    }
