--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ body{
 
  header{
      display: flex;
-     height: 700px;
-     width: auto;
+     padding: 40px;
      background-color: rgb(48, 33, 180);
  }
 
@@ -47,16 +46,19 @@ a{
 
  .players{
      margin-top: 100px;
-     display: flex;
-     flex-wrap: wrap;
+     display: grid;
+     grid-template-columns: repeat(3, 1fr);
+     
  }
  .player{
-     margin-left: 30px;
-     margin-top: 20px;
-     height: 400px;
-     width: 250px;
-     padding: 15px;
-     box-shadow: 20px 20px 50px rgb(228, 217, 217);
+
+  width: 284px;
+  padding: 10px 10px 20px 10px;
+  margin-left: 20px;
+  margin-top: 20px;
+  background-color: white;
+  box-shadow: 10px 10px 5px #aaaaaa;
+
  }
  .player img{
      max-width: 100%;
@@ -72,8 +74,7 @@ a{
       display: flex;
       margin-top: 100px;
       margin-left: 30px;
-      height: 550px;
-      width: auto;
+     /* padding: 40px; */
   }
   .optional-img img{
     max-width: 100%;
@@ -86,6 +87,12 @@ a{
    .footer-icon{
        text-align: center;
    }
+   .footer-img{
+      text-align: center;
+   }
+   footer{
+       margin-top: 100px;
+   }
 
 
    /*------------------- midea query------------------------ */
@@ -96,11 +103,26 @@ a{
            margin: 0;
        }
        header{
-           display:flex;
-           flex-direction: row;
+           display: flex;
+           flex-direction: column;
+           align-items: center;
+           width: 400px;
+          
        }
        .players{
            display: grid;
            grid-template-columns: repeat(1, 1fr);
+           justify-items: center;
+       }
+       .optional-section{
+           display: flex;
+           flex-direction: column;
+           align-items: center;
+       }
+       .optional-section{
+           margin-top: 20px;
+       }
+        .footer-img{
+          width: 440px;
        }
    }
